Putting it plans, features, showcase, testimonial, callouts and footer sections. Troubleshooting layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -301,6 +301,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -751,8 +752,9 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
@@ -796,7 +798,7 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .feature:nth-of-type(even) .feature_content {
+    .feature:nth-of-type(even) .feature__content {
         order: 2;
     }
 }
